--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
 		"express": "^4.18.2",
 		"express-async-handler": "^1.2.0",
 		"helmet": "^7.0.0",
-		"jsonwebtoken": "^9.0.1"
+		"jsonwebtoken": "^9.0.1",
+		"sqlite": "^5.0.1",
+		"sqlite3": "^5.1.6"
 	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^4.2.0",
