--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "dataschool",
+	"name": "CakePals",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
@@ -13,15 +13,15 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/MahmoudDawood/DataSchool.git"
+		"url": "git+https://github.com/MahmoudDawood/CakePals.git"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"bugs": {
-		"url": "https://github.com/MahmoudDawood/DataSchool/issues"
+		"url": "https://github.com/MahmoudDawood/CakePals/issues"
 	},
-	"homepage": "https://github.com/MahmoudDawood/DataSchool#readme",
+	"homepage": "https://github.com/MahmoudDawood/CakePals#readme",
 	"dependencies": {
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
