--- a/package.json
+++ b/package.json
@@ -23,16 +23,18 @@
 	},
 	"homepage": "https://github.com/MahmoudDawood/CakePals#readme",
 	"dependencies": {
+		"bcrypt": "^5.1.1",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"express-async-handler": "^1.2.0",
 		"helmet": "^7.0.0",
-		"jsonwebtoken": "^9.0.1",
+		"jsonwebtoken": "^9.0.2",
 		"sqlite": "^5.0.1",
 		"sqlite3": "^5.1.6"
 	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^4.2.0",
+		"@types/bcrypt": "^5.0.0",
 		"@types/express": "^4.17.17",
 		"@types/jsonwebtoken": "^9.0.2",
 		"@types/morgan": "^1.9.5",
