--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"express-async-handler": "^1.2.0",
+		"geolib": "^3.3.4",
 		"helmet": "^7.0.0",
 		"jsonwebtoken": "^9.0.2",
 		"sqlite": "^5.0.1",
