--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
 		"doc": "docs"
 	},
 	"scripts": {
-		"start": "npx nodemon --watch src/index.ts",
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+		"build": "tsc",
+		"start": "node ./dist/index.js",
+		"dev": "npx nodemon --watch src/index.ts"
 	},
 	"repository": {
 		"type": "git",
