--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	"scripts": {
 		"build": "tsc",
 		"start": "node ./dist/index.js",
-		"dev": "npx nodemon --watch src/index.ts"
+		"dev": "npx nodemon --watch src/index.ts",
+		"test": "jest"
 	},
 	"repository": {
 		"type": "git",
